# Arduino_Core_STM32

./: boards.txt  platform.txt
cores/arduino/: Arduino.h  Client.h  IPAddress.cpp  IPAddress.h  Print.cpp  Print.h  Stream.cpp  Stream.h  Tone.h  WInterrupts.cpp  WInterrupts.h  WMath.cpp  WMath.h  WString.cpp  WString.h  binary.h  board.h  wiring.h  wiring_analog.h  wiring_constants.h  wiring_digital.h  wiring_pulse.cpp  wiring_pulse.h  wiring_shift.h  wiring_time.c  wiring_time.h
libraries/: CMakeLists.txt
libraries/I3C_Controller/: CMakeLists.txt  keywords.txt  library.properties
libraries/I3C_Controller/examples/Entdaa-LPS22DF/: Entdaa-LPS22DF.ino  lps22df.cpp  lps22df.h
libraries/I3C_Controller/examples/SetDASA-LPS22DF/: SetDASA-LPS22DF.ino
libraries/I3C_Controller/src/: I3C_Controller.cpp  I3C_Controller.h
libraries/USBDevice/src/: usbd_if.c
